--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <img src="./img/ESD.png">
         <p>
             <span class="footer-menu">  
-                <a href="index.html">ESD |</a>
+                <a href="index.html">main |</a>
                 <a href="Hiphop.html"> Hiphop |</a>
                 <a href="Waacking.html"> Waacking |</a>
                 <a href="Krump.html"> Krump |</a>
